--- a/package.json
+++ b/package.json
@@ -34,10 +34,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
     "auto-launch": "^5.0.6",
     "dotenv": "^16.3.1",
     "easymde": "^2.18.0",
@@ -45,8 +41,7 @@
     "electron-settings": "^4.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-simplemde-editor": "^5.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
