--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "electron-settings": "^4.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
